--- a/NewKartoteka/AddBookControl.xaml
+++ b/NewKartoteka/AddBookControl.xaml
@@ -1,12 +1,14 @@
 ﻿<UserControl x:Class="NewKartoteka.AddBookControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NewKartoteka"
              mc:Ignorable="d"
-             DataContext="{Binding AddBook, Source={StaticResource Locator}}">
+             DataContext="{Binding AddBook, Source={StaticResource Locator}}"
+             Dialog:DialogParticipation.Register="{Binding}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,7 +16,8 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid >
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
@@ -57,7 +60,8 @@
         </ListBox>
         <TextBlock VerticalAlignment="Center" Text="Список авторов" FontSize="20" Grid.Row="3" Grid.Column="0" Margin="10,19,10.4,19"  />
         <Button  Content="Зарегистрировать" Grid.Row="4" Grid.Column="0" Style="{StaticResource RegisterBookButtonStyle}"
-                Command="{Binding SaveListCommand}"   CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
+                Command="{Binding SaveBookCommand}"   CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
                    HorizontalAlignment="Center" VerticalAlignment="Bottom"  Width="200" FontSize="20" Grid.ColumnSpan="2" />
     </Grid>
+    </ScrollViewer>
 </UserControl>
