--- a/NewKartoteka/MainWindow.xaml
+++ b/NewKartoteka/MainWindow.xaml
@@ -27,14 +27,42 @@
                         <RowDefinition Height="0.15*" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Button  Content="+ Добавить"   Grid.Row="0" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenAddBookWinCommand, Mode=OneWay}"
-                  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10.4,0" Width="120" FontSize="18" />
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox Grid.Column="0" FontSize="18" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" Width="300"
+                                 Text="{Binding FilterString, UpdateSourceTrigger=PropertyChanged}"
+                                 Controls:TextBoxHelper.Watermark="Поиск" Style="{DynamicResource SearchMetroTextBox}"></TextBox>
+                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button  Content="+ Добавить" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenAddBookWinCommand, Mode=OneWay}"
+                  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,20,0" Width="150" FontSize="18" />
+                        <Button  Content="Редактировать"    Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenEditBookWinCommand, Mode=OneWay}"
+                                 CommandParameter="{Binding ElementName=BooksDataGrid, Path=SelectedItem}"
+                  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0" Width="150" FontSize="18" />
+                    </StackPanel>
+                    </Grid>
                     <Controls:Flyout  Margin="0,-75,0,0" Panel.ZIndex="1" Width="500" IsOpen="{Binding IsNewBookOpen}" Grid.RowSpan="2"  
                                       Grid.Row="0"  Header="Добавление новой книги" Position="Left"  >
                         <local:AddBookControl x:Name="AddBookContr"></local:AddBookControl>
                     </Controls:Flyout>
-                    <DataGrid Grid.Row="1"  ItemsSource="{Binding Books}" AutoGenerateColumns="True" Style="{StaticResource AzureDataGrid}">
+                    <Controls:Flyout  Margin="0,-75,0,0" Panel.ZIndex="1"  Width="350" IsOpen="{Binding IsEditBookOpen}" Grid.RowSpan="2"  
+                                      Grid.Row="0"  Header="Редактирование книги" Position="Right"  >
+                        <local:EditBookControl x:Name="EditBook"></local:EditBookControl>
+                    </Controls:Flyout>
+                    <DataGrid x:Name="BooksDataGrid" Grid.Row="1"  ItemsSource="{Binding DataGridCollection}" AutoGenerateColumns="False" Style="{StaticResource AzureDataGrid}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="ID"
+                                    Binding="{Binding Id}" />
+                            <DataGridTextColumn Header="Year"
+                                    Binding="{Binding Year}" />
+                            <DataGridTextColumn Header="Name"
+                                    Binding="{Binding Name}" />
+                            <DataGridTextColumn Header="Description"
+                                    Binding="{Binding Description}" />
 
+                        </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
             </TabItem.Content>
