--- a/NewKartoteka/MainWindow.xaml
+++ b/NewKartoteka/MainWindow.xaml
@@ -35,6 +35,10 @@
                                         Header="Добавление нового автора" Position="Left"  >
             <local:AddAuthorControl x:Name="AddAuthorContr"></local:AddAuthorControl>
         </Controls:Flyout>
+        <Controls:Flyout  Panel.ZIndex="1"  Width="500" IsOpen="{Binding IsEditAuthorOpen}" Grid.RowSpan="2"  
+                                       Header="Редактирование автора" Position="Right"  >
+            <local:EditAuthorControl x:Name="EditAuthorContr"></local:EditAuthorControl>
+        </Controls:Flyout>
         <TabControl   Controls:TabControlHelper.IsUnderlined="True">
             <TabItem Header="Книги"  >
                 <TabItem.Content>
@@ -62,7 +66,7 @@
                   VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0" Width="150" FontSize="18" />
                             </StackPanel>
                         </Grid>
-                        <DataGrid x:Name="BooksDataGrid" IsReadOnly="True" Grid.Row="1" ItemsSource="{Binding BooksDataGridCollection}" AutoGenerateColumns="False" Style="{StaticResource AzureDataGrid}">
+                        <DataGrid x:Name="BooksDataGrid" IsReadOnly="True" SelectionMode="Single" Grid.Row="1" ItemsSource="{Binding BooksDataGridCollection}" AutoGenerateColumns="False" Style="{StaticResource AzureDataGrid}">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="ID"
                                     Binding="{Binding Id}" />
@@ -99,6 +103,9 @@
                                 <Button  Content="- Удалить" Style="{StaticResource RemoveAndEditAuthorButtonStyle}" Command="{Binding RemoveAuthorWinCommand, Mode=OneWay}"
                   VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,20,0" Width="150" FontSize="18" 
                                        CommandParameter="{Binding ElementName=AuthorsDataGrid, Path=SelectedItem}"  />
+                                <Button  Content="Редактировать" Style="{StaticResource RemoveAndEditAuthorButtonStyle}" Command="{Binding OpenEditAuthorWinCommand, Mode=OneWay}"
+                                 CommandParameter="{Binding ElementName=AuthorsDataGrid, Path=SelectedItem}"
+                  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0" Width="150" FontSize="18" />
                             </StackPanel>
                         </Grid>
                         <DataGrid x:Name="AuthorsDataGrid" IsReadOnly="True" Grid.Row="1" ItemsSource="{Binding AuthorsDataGridCollection}" AutoGenerateColumns="False" Style="{StaticResource AzureDataGrid}">
